--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How well do my friebnds know me</title>
+    <link href="index.js"/>
 </head>
 <body>
     Hi I am kalarav Bhavsar. Welcom to my quiz.
